MDEV-14694 ALTER COLUMN IF EXISTS .. causes syntax error.

Implementing the 'IF EXISTS' option for statements
        ALTER TABLE ALTER COLUMN SET/DROP DEFAULT.